Add static timestamp to Heatmap

--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
                </center>
             </blockquote>
             <h3 class="section-heading heading-sub">Heat map </h3>
+			<p id="updated" style="font-size: 11px">as on 23 May 01:00 am</p>
             <center>
                <h4 class="section-heading" style="color: #ff073a">Confirmed cases</h4>
+			   
                <canvas id="confirmedChart" width="100" height="50"></canvas>
                <script>
                   Chart.defaults.global.legend.display = false;
