--- a/index.html
+++ b/index.html
@@ -67,148 +67,26 @@
                </center>
             </blockquote>
             <h3 class="section-heading heading-sub">Heat map </h3>
-			<p id="updated" style="font-size: 11px">as on 23 May 01:00 am</p>
+			<p id="updated" style="font-size: 11px">( in last 5 days )</p>
             <center>
                <h4 class="section-heading" style="color: #ff073a">Confirmed cases</h4>
-			   
                <canvas id="confirmedChart" width="100" height="50"></canvas>
-               <script>
-                  Chart.defaults.global.legend.display = false;
-                  var conf = document.getElementById('confirmedChart');
-                  var confirmedChart = new Chart(conf, {
-                      type: 'bar',
-                      data: {
-                          labels: ['22 May', '21 May', '20 May', '19 May', '18 May'],
-                          datasets: [{
-                              label: 'Confirmed cases in last 5 days',
-                              data: [6570, 6023, 5720, 6154, 4628],
-                              backgroundColor: [
-                                  '#ff073a',
-                                  '#ff073a',
-                                  '#ff073a',
-                                  '#ff073a',
-                                  '#ff073a'
-                              ],
-                              borderColor: [
-                                  '#ff073a',
-                                  '#ff073a',
-                                  '#ff073a',
-                                  '#ff073a',
-                                  '#ff073a'
-                              ],
-                              borderWidth: 1
-                          }]
-                      },
-                      options: {
-                          scales: {
-                              yAxes: [{
-                                  ticks: {
-                                      beginAtZero: true
-                                  }
-                              }],
-                  			xAxes: [{
-                  				barPercentage: 0.5
-                  			}]
-                          }
-                      }
-                  });
-               </script>
                <br/>
                <h4 class="section-heading" style="color: #28a745">Recovered cases</h4>
                <canvas id="recoChart" width="100" height="50"></canvas>
-               <script>
-                  Chart.defaults.global.legend.display = false;
-                  var reco = document.getElementById('recoChart');
-                  var recoChart = new Chart(reco, {
-                      type: 'bar',
-                      data: {
-                          labels: ['22 May', '21 May', '20 May', '19 May', '18 May'],
-                          datasets: [{
-                              label: 'Recovered cases in last 5 days',
-                              data: [3271, 3131, 3113, 3032, 2482],
-                              backgroundColor: [
-                                  '#28a745',
-                                  '#28a745',
-                                  '#28a745',
-                                  '#28a745',
-                                  '#28a745'
-                              ],
-                              borderColor: [
-                                  '#28a745',
-                                  '#28a745',
-                                  '#28a745',
-                                  '#28a745',
-                                  '#28a745'
-                              ],
-                              borderWidth: 1
-                          }]
-                      },
-                      options: {
-                          scales: {
-                              yAxes: [{
-                                  ticks: {
-                                      beginAtZero: true
-                                  }
-                              }],
-                  			xAxes: [{
-                  				barPercentage: 0.5
-                  			}]
-                          }
-                      }
-                  });
-               </script>
+               
                <br/>
                <h4 class="section-heading" style="color: #6c757d">Deceased cases</h4>
                <canvas id="decChart" width="100" height="50"></canvas>
-               <script>
-                  Chart.defaults.global.legend.display = false;
-                  var dec = document.getElementById('decChart');
-                  var decChart = new Chart(dec, {
-                      type: 'bar',
-                      data: {
-                          labels: ['22 May', '21 May', '20 May', '19 May', '18 May'],
-                          datasets: [{
-                              label: 'Deceased cases in last 5 days',
-                              data: [142, 148, 134, 146, 131],
-                              backgroundColor: [
-                                  '#6c757d',
-                                  '#6c757d',
-                                  '#6c757d',
-                                  '#6c757d',
-                                  '#6c757d'
-                              ],
-                              borderColor: [
-                                  '#6c757d',
-                                  '#6c757d',
-                                  '#6c757d',
-                                  '#6c757d',
-                                  '#6c757d'
-                              ],
-                              borderWidth: 1
-                          }]
-                      },
-                      options: {
-                          scales: {
-                              yAxes: [{
-                                  ticks: {
-                                      beginAtZero: true
-                                  }
-                              }],
-                  			xAxes: [{
-                  				barPercentage: 0.5
-                  			}]
-                          }
-                      }
-                  });
-               </script>
             </center>
             <br/>
             <div class="jumbotron jum">
-               <h4>Cases Tested</h4>
+               <h4>Total Samples Tested</h4>
                <!-- https://www.icmr.gov.in/pdf/covid/update/ICMR_testing_update_18May2020_9AM_IST.pdf -->
                <h2 id="cases-tested-in" class="cases-tested-in"></h2>
                <h4 id="cases-time-in" class="cases-time-in">as on </h4>
                <br/>
+			   <canvas id="samplesChart" width="100" height="40"></canvas>
                <br/>
                <center>
                   <a href="https://docs.google.com/forms/d/e/1FAIpQLSfi1JugttiwxAT5chK29XsN4Y27nJh6GtC6-5htdjGQcycnJA/viewform?vc=0&c=0&w=1">Leave feedback...</a>
@@ -220,6 +98,7 @@
       <script>
          callCovidApi('TT', '#updatedTime', '#table-body', '#rRate', '#mRate');
          getCasesTestedCount('#cases-tested-in');
+		 processValuesForChart(true, false, false);
       </script>
       <!-- Footer menu -->
       <nav class="navbar navbar-inverse navbar-fixed-bottom">
