--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
             <h3 class="section-heading heading-sub">Heat map </h3>
 			<p id="updated" style="font-size: 11px">( in last 10 days )</p>
             <center>
+			   <h4 class="section-heading" style="color: white">All-in-One</h4>
+               <canvas id="allInOneChart" width="100" height="50"></canvas>
+               <br/> 	
                <h4 class="section-heading" style="color: #ff073a">Confirmed cases</h4>
                <canvas id="confirmedChart" width="100" height="50"></canvas>
                <br/>
