--- a/mortality.html
+++ b/mortality.html
@@ -51,7 +51,7 @@
                <center>
                   <div class="flex-container rate-box">
                      <div class="btn-group-vertical">
-                        <button type="button" class="btn btn-primary" style="background-color: #6c757d" id="mRate">Overall<br/>Mortality rate </button>
+                        <button type="button" class="btn btn-primary" style="background-color: #6c757d" id="mRatePct"></button>
                      </div>
                   </div>
                </center>
@@ -81,7 +81,7 @@
          </div>
       </div>
       <script>
-         callCovidApi('TT', '#updatedTime', '#table-body', '#rRate', '#mRate');
+         callCovidApi('TT', '#updatedTime', '#table-body', '#rRatePct', '#mRatePct');
 		 computeOverallMortRate('#table-body-mort');
 		 processValuesForChart(false, false, true);
       </script>
