--- a/recovery.html
+++ b/recovery.html
@@ -51,7 +51,7 @@
                <center>
                   <div class="flex-container rate-box">
                      <div class="btn-group-vertical">
-                        <button type="button" class="btn btn-primary" style="background-color: #28a745" id="rRate">Overall<br/>Recovery rate </button>
+                        <button type="button" class="btn btn-primary" style="background-color: #28a745" id="rRatePct"></button>
                      </div>
                   </div>
                </center>
@@ -82,7 +82,7 @@
          </div>
       </div>
       <script>
-         callCovidApi('TT', '#updatedTime', '#table-body', '#rRate', '#mRate');
+         callCovidApi('TT', '#updatedTime', '#table-body', '#rRatePct', '#mRatePct');
 		 computeOverallRecoRate('#table-body-reco');
 		 processValuesForChart(false, true, false);
       </script>
