Do not display the timestamp for 'Samples Tested'

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                <h4>Total Samples Tested</h4>
                <!-- https://www.icmr.gov.in/pdf/covid/update/ICMR_testing_update_18May2020_9AM_IST.pdf -->
                <h2 id="cases-tested-in" class="cases-tested-in"></h2>
-               <h4 id="cases-time-in" class="cases-time-in">as on </h4>
+               <!-- <h4 id="cases-time-in" class="cases-time-in">as on </h4> -->
                <br/>
 			   <canvas id="samplesChart" width="100" height="40"></canvas>
                <br/>
