Comment out 'Active' header

--- a/state_ka.html
+++ b/state_ka.html
@@ -51,7 +51,7 @@
                   <thead class="table-heading">
                      <tr>
                         <th class="table-header-right header-confirmed">Confirmed</th>
-                        <th class="table-header-right header-active">Active</th>
+                       <!--  <th class="table-header-right header-active">Active</th> -->
                         <th class="table-header-right header-recovered">Recovered</th>
                         <th class="table-header-right header-dead">Deceased</th>
                      </tr>
