--- a/state_ap.html
+++ b/state_ap.html
@@ -50,7 +50,7 @@
                   <thead class="table-heading">
                      <tr>
                         <th class="table-header-right header-confirmed">Confirmed</th>
-                        <th class="table-header-right header-active">Active</th>
+                       <!-- <th class="table-header-right header-active">Active</th> -->
                         <th class="table-header-right header-recovered">Recovered</th>
                         <th class="table-header-right header-dead">Deceased</th>
                      </tr>
