Add chart to all state pages

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
             </div>
          </div>
       </nav>
+	  
+	  <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
       <div id="section1" class="container-fluid main-class">
          <h2>India</h2>
          <div class="value-box">
@@ -98,6 +100,7 @@
             </div>
          </div>
       </div>
+	  </div>
       <script>
          callCovidApi('TT', '#updatedTime', '#table-body', '#rRate', '#mRate');
          getCasesTestedCount('#cases-tested-in');
