--- a/mortality.html
+++ b/mortality.html
@@ -43,6 +43,7 @@
          </div>
       </nav>
 	  
+	  <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
       <div id="section1" class="container-fluid main-class">
          <h2>Mortality Rate</h2>
          <div class="value-box">
@@ -80,6 +81,8 @@
             </blockquote>
          </div>
       </div>
+	  </div>
+	  
       <script>
          callCovidApi('TT', '#updatedTime', '#table-body', '#rRatePct', '#mRatePct');
 		 computeOverallMortRate('#table-body-mort');
