Add Bootstrap Grid

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
          </div>
       </nav>
 	  
+	  <!-- Add Bootstrap Grid -->
 	  <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
       <div id="section1" class="container-fluid main-class">
          <h2>India</h2>
@@ -70,6 +71,7 @@
             </blockquote>
             <h3 class="section-heading heading-sub">Heat map </h3>
 			<p id="updated" style="font-size: 11px">( in last 10 days )</p>
+			
             <center>
 			   <h4 class="section-heading" style="color: white">All-in-One</h4>
                <canvas id="allInOneChart" width="100" height="50"></canvas>
