Bring back 'ACTIVE' count

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
          <h2>India</h2>
          <div class="value-box">
             <p id="updatedTime" style="font-size: 13px"></p>
-            <blockquote>
-               <table class="table table-hover">
+            <!-- <blockquote> -->
+               <table class="table table-hover font-table">
                   <thead class="table-heading">
                      <tr>
                         <th class="table-header-right header-confirmed">Confirmed</th>
-                        <!-- <th class="table-header-right header-active">Active</th> -->
+                        <th class="table-header-right header-active">Active</th>
                         <th class="table-header-right header-recovered">Recovered</th>
                         <th class="table-header-right header-dead">Deceased</th>
                      </tr>
@@ -60,6 +60,7 @@
                   <tbody class="table-body" id="table-body">
                   </tbody>
                </table>
+			   <!-- </blockquote> -->
                <center>
                   <div class="flex-container rate-box">
                      <div class="btn-group-vertical">
@@ -67,8 +68,8 @@
                         <button type="button" class="btn btn-primary" style="background-color: #6c757d" id="mRate">Mortality rate </button>
                      </div>
                   </div>
-               </center>
-            </blockquote>
+				</center>
+            
             <h3 class="section-heading heading-sub">Heat map </h3>
 			<p id="updated" style="font-size: 11px">( in last 10 days )</p>
 			
