--- a/state_ap.html
+++ b/state_ap.html
@@ -48,12 +48,12 @@
          <h2>Andhra Pradesh</h2>
          <div class="value-box">
             <p id="updatedTimeAP" style="font-size: 13px"></p>
-            <blockquote>
+            <!-- <blockquote> -->
                <table class="table table-hover">
                   <thead class="table-heading">
                      <tr>
                         <th class="table-header-right header-confirmed">Confirmed</th>
-                       <!-- <th class="table-header-right header-active">Active</th> -->
+                       <th class="table-header-right header-active">Active</th>
                         <th class="table-header-right header-recovered">Recovered</th>
                         <th class="table-header-right header-dead">Deceased</th>
                      </tr>
@@ -69,7 +69,7 @@
                      </div>
                   </div>
                </center>
-            </blockquote>
+            <!-- </blockquote> -->
 			
 			<h3 class="section-heading heading-sub">Heat map </h3>
 			<p id="updated" style="font-size: 11px">( in last 10 days )</p>
