--- a/state_kl.html
+++ b/state_kl.html
@@ -47,12 +47,12 @@
          <h2>Kerala</h2>
          <div class="value-box">
             <p id="updatedTimeKL" style="font-size: 13px"></p>
-            <blockquote>
+            <!-- <blockquote> -->
                <table class="table table-hover">
                   <thead class="table-heading">
                      <tr>
                         <th class="table-header-right header-confirmed">Confirmed</th>
-                        <!-- <th class="table-header-right header-active">Active</th> -->
+                        <th class="table-header-right header-active">Active</th>
                         <th class="table-header-right header-recovered">Recovered</th>
                         <th class="table-header-right header-dead">Deceased</th>
                      </tr>
@@ -68,7 +68,7 @@
                      </div>
                   </div>
                </center>
-            </blockquote>
+            <!-- </blockquote> -->
 			
 			<h3 class="section-heading heading-sub">Heat map </h3>
 			<p id="updated" style="font-size: 11px">( in last 10 days )</p>
