--- a/state_tn.html
+++ b/state_tn.html
@@ -48,12 +48,12 @@
          <h2>TamilNadu</h2>
          <div class="value-box">
             <p id="updatedTimeTN" style="font-size: 13px"></p>
-            <blockquote>
+            <!-- <blockquote> -->
                <table class="table table-hover">
                   <thead class="table-heading">
                      <tr>
                         <th class="table-header-right header-confirmed">Confirmed</th>
-                      <!-- <th class="table-header-right header-active">Active</th> -->
+                      <th class="table-header-right header-active">Active</th>
                         <th class="table-header-right header-recovered">Recovered</th>
                         <th class="table-header-right header-dead">Deceased</th>
                      </tr>
@@ -64,12 +64,12 @@
                <center>
                   <div class="flex-container rate-box">
                      <div class="btn-group-vertical">
-                        <button type="button" class="btn btn-primary" style="background-color: #28a745" id="rRateTN">Recovery rate </button>
-                        <button type="button" class="btn btn-primary" style="background-color: #6c757d" id="mRateTN">Mortality rate </button>
+                        <button type="button" class="btn btn-primary" style="background-color: #28a745" id="rRateTN">Recovery </button>
+                        <button type="button" class="btn btn-primary" style="background-color: #6c757d" id="mRateTN">Mortality </button>
                      </div>
                   </div>
                </center>
-            </blockquote>
+            <!-- </blockquote> -->
 			
 			<h3 class="section-heading heading-sub">Heat map </h3>
 			<p id="updated" style="font-size: 11px">( in last 10 days )</p>
