--- a/mortality.html
+++ b/mortality.html
@@ -63,6 +63,9 @@
             <center>
 			   <br/>
                <canvas id="mrChart" width="100" height="30"></canvas>
+			   <img id = "prevMortRate" src = "./images/prev-icon.png" height="16" width="16" onclick="allMortRate('prev')" hidden="true">
+                  <img id = "nextMortRate" src = "./images/next-icon.png" height="16" width="16" onclick="allMortRate('next')">
+				  <p style="color: #80868b; font-size: 10px; padding-top:15px">Few days may not have the data or zero value.<br/>Hence there will be no bars in the Chart</p>
 			</center>
 			
             <h3 class="section-heading">States</h3>
