--- a/recovery.html
+++ b/recovery.html
@@ -64,6 +64,9 @@
             <center>
 			   <br/>
                <canvas id="rrChart" width="100" height="30"></canvas>
+			   <img id = "prevRecoRate" src = "./images/prev-icon.png" height="16" width="16" onclick="allRecoRate('prev')" hidden="true">
+                  <img id = "nextRecoRate" src = "./images/next-icon.png" height="16" width="16" onclick="allRecoRate('next')">
+				  <p style="color: #80868b; font-size: 10px; padding-top:15px">Few days may not have the data or zero value.<br/>Hence there will be no bars in the Chart</p>
 			</center>
 			
             <h3 class="section-heading">States</h3>
