--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                      </div>
                   </div>
                </center>
-               <h3 class="section-heading heading-sub">Heat map </h3>
+               <h3 class="section-heading heading-sub">Trend analysis</h3>
                <p id="updated" style="font-size: 11px">( 10 days interval )</p>
                <center>
                   <h4 class="section-heading" style="color: white">All-in-One</h4>
