--- a/state_kl.html
+++ b/state_kl.html
@@ -70,7 +70,7 @@
                </center>
             <!-- </blockquote> -->
 			
-			<h3 class="section-heading heading-sub">Heat map </h3>
+			<h3 class="section-heading heading-sub">Trend analysis</h3>
 			<p id="updated" style="font-size: 11px">( 10 days interval )</p>
             <center>
 			   <h4 class="section-heading" style="color: white">All-in-One</h4>
