--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 					<br/>
                   <div class="flex-container rate-box">
                      <div class="btn-group-vertical">
-                        <button type="button" class="btn btn-primary" style="background-color: #28a745" id="rRate">Recovery rate </button>
-                        <button type="button" class="btn btn-primary" style="background-color: #6c757d" id="mRate">Mortality rate </button>
+                        <button type="button" class="btn btn-primary" style="background-color: #28a745" id="rRate">Recovery </button>
+                        <button type="button" class="btn btn-primary" style="background-color: #6c757d" id="mRate">Mortality </button>
                      </div>
                   </div>
                </center>
