--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <script src="./script/bootstrap.min.js"></script>
       <script src="./script/custom-script.js"></script>
       <script src="./script/chart.js"></script>
+	  <script src="./script/loader.js"></script>
       <!-- <script src= 
          "https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.js"> 
          </script> -->
@@ -63,10 +64,14 @@
                <center>
 					<br/>
                   <div class="flex-container rate-box">
-                     <div class="btn-group-vertical">
+                     <!-- <div class="btn-group-vertical">
                         <button type="button" class="btn btn-primary" style="background-color: #28a745" id="rRate">Recovery </button>
                         <button type="button" class="btn btn-primary" style="background-color: #6c757d" id="mRate">Mortality </button>
-                     </div>
+                     </div> -->
+					 <div>
+						<span id="rRate"></span>
+						<span id="mRate"></span>
+					 </div>					 
                   </div>
                </center>
                <h3 class="section-heading heading-sub">Trend analysis</h3>
@@ -123,7 +128,7 @@
          callCovidApi('TT', '#updatedTime', '#table-body', '#rRate', '#mRate');
          getCasesTestedCount('#cases-tested-in');
          processValuesForChart(true, false, false);
-      </script>
+	  </script>
       <!-- Footer menu -->
       <nav class="navbar navbar-inverse navbar-fixed-bottom">
          <div class="container-fluid">
