--- a/recovery.html
+++ b/recovery.html
@@ -28,6 +28,7 @@
       <script src="./script/bootstrap.min.js"></script>
       <script src="./script/custom-script.js"></script>
 	  <script src="./script/chart.js"></script>
+	  <script src="./script/loader.js"></script>
    </head>
    <body>
       <!-- Header Menu -->
@@ -49,11 +50,12 @@
          <div class="value-box">
             <p id="updatedTime" style="font-size: 13px"></p>
             <blockquote>
+			   <br/>
                <center>
                   <div class="flex-container rate-box">
-                     <div class="btn-group-vertical">
-                        <button type="button" class="btn btn-primary" style="background-color: #28a745" id="rRatePct"></button>
-                     </div>
+					 <div>
+						<span id="rRatePct"></span>
+					 </div>	
                   </div>
                </center>
             </blockquote>
