--- a/state_ap.html
+++ b/state_ap.html
@@ -28,6 +28,7 @@
       <script src="./script/bootstrap.min.js"></script>
       <script src="./script/custom-script.js"></script>
 	  <script src="./script/chart.js"></script>
+	  <script src="./script/loader.js"></script>
    </head>
    <body>
       <!-- Header Menu -->
@@ -61,12 +62,12 @@
                   <tbody class="table-body-ap" id="table-body-ap">
                   </tbody>
                </table>
-               <center>
-                  <div class="flex-container rate-box">
-                     <div class="btn-group-vertical">
-                        <button type="button" class="btn btn-primary" style="background-color: #28a745" id="rRateAP">Recovery rate </button>
-                        <button type="button" class="btn btn-primary" style="background-color: #6c757d" id="mRateAP">Mortality rate </button>
-                     </div>
+               <center>                  
+				  <div class="flex-container rate-box">
+                      <div>
+						<span id="rRateAP"></span>
+						<span id="mRateAP"></span>
+					 </div>		
                   </div>
                </center>
             <!-- </blockquote> -->
