--- a/state_kl.html
+++ b/state_kl.html
@@ -27,6 +27,7 @@
       <script src="./script/bootstrap.min.js"></script>
       <script src="./script/custom-script.js"></script>
 	  <script src="./script/chart.js"></script>
+	  <script src="./script/loader.js"></script>
    </head>
    <body>
       <!-- Header Menu -->
@@ -61,11 +62,11 @@
                   </tbody>
                </table>
                <center>
-                  <div class="flex-container rate-box">
-                     <div class="btn-group-vertical">
-                        <button type="button" class="btn btn-primary" style="background-color: #28a745" id="rRateKL">Recovery rate </button>
-                        <button type="button" class="btn btn-primary" style="background-color: #6c757d" id="mRateKL">Mortality rate </button>
-                     </div>
+			      <div class="flex-container rate-box">
+                      <div>
+						<span id="rRateKL"></span>
+						<span id="mRateKL"></span>
+					 </div>		
                   </div>
                </center>
             <!-- </blockquote> -->
