--- a/state_tn.html
+++ b/state_tn.html
@@ -28,6 +28,7 @@
       <script src="./script/bootstrap.min.js"></script>
       <script src="./script/custom-script.js"></script>
 	  <script src="./script/chart.js"></script>
+	  <script src="./script/loader.js"></script>
    </head>
    <body>
       <!-- Header Menu -->
@@ -63,10 +64,10 @@
                </table>
                <center>
                   <div class="flex-container rate-box">
-                     <div class="btn-group-vertical">
-                        <button type="button" class="btn btn-primary" style="background-color: #28a745" id="rRateTN">Recovery </button>
-                        <button type="button" class="btn btn-primary" style="background-color: #6c757d" id="mRateTN">Mortality </button>
-                     </div>
+                      <div>
+						<span id="rRateTN"></span>
+						<span id="mRateTN"></span>
+					 </div>		
                   </div>
                </center>
             <!-- </blockquote> -->
