Update Gauge to Pie

--- a/mortality.html
+++ b/mortality.html
@@ -89,7 +89,7 @@
 	  </div>
 	  
       <script>
-         callCovidApi('TT', '#updatedTime', '#table-body', '#rRatePct', '#mRatePct');
+         callCovidApi('TT', '#updatedTime', '#table-body', '', '#mRatePct');
 		 computeOverallMortRate('#table-body-mort');
 		 processValuesForChart(false, false, true);
       </script>
