--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
                </table>
                <!-- </blockquote> -->
                <center>
-					<br/>
                   <div class="flex-container rate-box">
                      <!-- <div class="btn-group-vertical">
                         <button type="button" class="btn btn-primary" style="background-color: #28a745" id="rRate">Recovery </button>
@@ -70,7 +69,7 @@
                      </div> -->
 					 <div>
 						<span id="rRate"></span>
-						<span id="mRate"></span>
+						<!-- <span id="mRate"></span> -->
 					 </div>					 
                   </div>
                </center>
