--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                         <button type="button" class="btn btn-primary" style="background-color: #28a745" id="rRate">Recovery </button>
                         <button type="button" class="btn btn-primary" style="background-color: #6c757d" id="mRate">Mortality </button>
                      </div> -->
-					 <div>
-						<span id="rRate"></span>
+					 <div id="rRate" style="height: 170px; padding-top:-40px; padding-bottom:-40px">
+						<!-- <span id="rRate"></span> -->
 						<!-- <span id="mRate"></span> -->
 					 </div>					 
                   </div>
