--- a/state_ka.html
+++ b/state_ka.html
@@ -64,8 +64,7 @@
                </table>
                <center>
 			      <div class="flex-container rate-box">
-                      <div>
-						<span id="rRateKA"></span>
+                    <div id="rRateKA" style="height: 170px; padding-top:-40px; padding-bottom:-40px">
 					 </div>		
                   </div>
                </center>
