--- a/state_kl.html
+++ b/state_kl.html
@@ -63,8 +63,7 @@
                </table>
                <center>
 			      <div class="flex-container rate-box">
-                      <div>
-						<span id="rRateKL"></span>
+                      <div id="rRateKL" style="height: 170px; padding-top:-40px; padding-bottom:-40px">
 					 </div>		
                   </div>
                </center>
