--- a/state_tg.html
+++ b/state_tg.html
@@ -64,9 +64,8 @@
                </table>
                <center>
 			      <div class="flex-container rate-box">
-                      <div>
-						<span id="rRateTG"></span>
-					 </div>		
+                      <div id="rRateTG" style="height: 170px; padding-top:-40px; padding-bottom:-40px">
+					 </div>				
                   </div>
                </center>
             <!-- </blockquote> -->
