--- a/state_tn.html
+++ b/state_tn.html
@@ -64,8 +64,7 @@
                </table>
                <center>
                   <div class="flex-container rate-box">
-                      <div>
-						<span id="rRateTN"></span>
+                      <div id="rRateTN" style="height: 170px; padding-top:-40px; padding-bottom:-40px">
 					 </div>		
                   </div>
                </center>
