Added manifest json file

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <meta name="author" content="Gokulan Viswanathan">
       <link rel="icon" type="image/jpg" sizes="16x16" href="./images/corona-title-image.jpg">
       <title>Covid'19 India</title>
+	  <link rel="manifest" href="/manifest.json">
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
